manifests/base/gatekeeper/constraints/require-labels.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireLabels
metadata:
  name: require-labels
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - kube-system
      - argocd
      - gatekeeper-system
      - calico-system
      - tigera-operator
      - istio-system
      - cert-manager
      - synology-csi
      - localstack
  parameters:
    labels:
      - "app.kubernetes.io/name"
